Final adjutes: icons folder, deleting empty lines and fixing z-index on carousel

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -189,7 +189,6 @@ p{
     height: 850px;
     perspective: 300px;
     margin-top:-80px;
-    z-index: 100;
 }
 .carousel .carousel-item{
     width: 830px;
